--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/conference-demo
+spring.datasource.username=postgres
+spring.datasource.password=qwert
+spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
+spring.jpa.hibernate.show-sql=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
