--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/conference-demo
+spring.datasource.url=${DB_URL}
 spring.datasource.username=postgres
 spring.datasource.password=qwert
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 spring.jpa.hibernate.show-sql=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+app.version=1.0.0
 
