--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.datasource.url=${DB_URL}
-spring.datasource.username=postgres
-spring.datasource.password=qwert
+spring.datasource.username=${DB_USR}
+spring.datasource.password=${DB_PSW}
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 spring.jpa.hibernate.show-sql=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.port = 5000
 
 app.version=1.0.0
 
